--- a/demo/src/main/resources/application.development.yaml
+++ b/demo/src/main/resources/application.development.yaml
@@ -5,3 +5,9 @@ http:
 
 app:
   development: true
+spring:
+  jpa:
+    properties:
+      hibernate:
+        dialect: com.mavenir.vmp.core.jpa.SQLiteDialect
+
